# utrakr-api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Justfile  waypoint.hcl
benches/: README.md  events.rs
scripts/: Tests.run.xml  app-deploy.sh  utrakr-api.run.xml
src/: event_logger.rs  google_auth.rs  id_generator.rs  main.rs  ulid.rs  url_dao.rs  utils.rs
src/dao/: mod.rs  url_dao.rs
src/data/: views.rs
src/events/: event_logger.rs  event_reader.rs  mod.rs  ulid.rs
terraform/: app.tf  main.tf  redis.tf  startup.sh
