[package]
authors = ["Cameron Davison <cameron@utrakr.app>"]
edition = "2018"
name = "utrakr-api"
version = "0.1.0"
[dependencies]
anyhow = "^1.0"
chrono = "*"
either = "*"
fehler = "^1.0.0"
http-types = "^2"
itertools = "*"
jsonwebtoken = "^7"
lazy_static = "^1.4.0"
log = "^0.4"
multimap = "^0.8"
rand = "^0.7"
redis = "^0.16.0"
serde_json = "^1.0"
structopt = "^0.3"
tide = "^0.13.0"
time = "^0.2.20"
walkdir = "2"

[dependencies.async-std]
features = ["attributes"]
version = "1.6.0"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dev-dependencies]
tempfile = "3.1.0"
