[package]
authors = ["Cameron Davison <cameron@utrakr.app>"]
edition = "2018"
name = "utrakr-api"
version = "0.1.0"
[dependencies]
anyhow = "*"
either = "*"
fehler = "*"
http-types = "*"
itertools = "*"
jsonwebtoken = "*"
lazy_static = "*"
log = "*"
multimap = "*"
rand = "*"
redis = "*"
serde_json = "*"
structopt = "*"
tide = "*"
time = "*"
walkdir = "*"

[dependencies.async-std]
features = ["attributes"]
version = "*"

[dependencies.chrono]
features = ["serde"]
version = "*"

[dependencies.serde]
features = ["derive"]
version = "*"

[dependencies.ureq]
features = ["json"]
version = "*"

[dev-dependencies]
tempfile = "*"
